# typed-jni-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  publish.yaml  test.yaml
core/: Cargo.toml  README.md
core/src/: array.rs  call.rs  field.rs  frame.rs  helper.rs  lib.rs  member.rs  monitor.rs  object.rs  reference.rs  register.rs  string.rs  sys.rs  throwable.rs  vm.rs
example/: Cargo.toml
example/java/: .gitignore
example/java/com/github/kr328/typedjni/: Example.java
example/src/: lib.rs  main.rs  tests.rs
jni/: Cargo.toml  README.md  build.rs
jni/src/: args.rs  builtin.rs  bulitin.rs  context.rs  ext.rs  ffisafe.rs  lib.rs  raw.rs  reference.rs  resolver.rs  sys.rs  throwable.rs  typed.rs  vm.rs
jni/src/array/: mod.rs  object.rs  primitive.rs  primitive_impls.rs
jni/src/builtin/: class.rs  classloader.rs  mod.rs  object.rs  string.rs  throwable.rs
jni/src/call/: args.rs  mod.rs  target.rs
jni/src/class/: mod.rs
jni/src/field/: get.rs  mod.rs  set.rs
jni/src/object/: mod.rs
jni/src/reference/: mod.rs  new_ref.rs
jni/src/resolver/: cache.rs  helper.rs  mod.rs
jni/src/string/: mod.rs
jni/src/throwable/: helper.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
tests/: Cargo.toml
tests/src/: array.rs  cache.rs  call.rs  class.rs  field.rs  lib.rs  native.rs  object.rs  string.rs  throwable.rs
tests/testdata/: unicode-test.html
