[workspace]
resolver = "2"
members = ["core", "example", "jni", "tests"]

[workspace.package]
version = "1.1.2"
edition = "2024"
license = "MIT"
description = "Type-Safe JNI access for Rust."
homepage = "https://github.com/Kr328/typed-jni-rs"
repository = "https://github.com/Kr328/typed-jni-rs"
keywords = ["jni", "java"]
categories = ["development-tools::ffi"]

[workspace.dependencies]
typed-jni-core = { path = "core", version = "1.1.2", default-features = false }
typed-jni = { path = "jni", version = "1.1.2", default-features = false }
