[package]
name = "typed-jni-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "./README.md"

[features]
alloc = []
print-throwable = []
default = ["alloc"]

[dependencies]
