[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
typed-jni = { path = "../jni", default-features = false }

libc = "0.2"
libc_alloc = "1.0"
jni = { version = "0.21", features = ["invocation"] }

[dev-dependencies]
tokio = "1"
reqwest = "0.12"
rand = "0.8"
tempdir = "0.3"
