[package]
name = "example"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
typed-jni = { path = "../jni", default-features = false }

jni = { version = "0.21", features = ["invocation"] }

[dev-dependencies]
tokio = "1"
reqwest = "0.12"
rand = "0.9"
tempdir = "0.3"
