[package]
name = "typed-jni"
version.workspace = true
edition.workspace = true

[features]
std = []
cache = ["uluru", "std"]
print-throwable = ["typed-jni-core/print-throwable"]

default = ["cache", "std"]

[dependencies]
typed-jni-core = { workspace = true, features = ["alloc"] }

uluru = { version = "3.1", optional = true }
